2004-10-07  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b222

	* Change: Return "" if string is empty in unhtmlentities (issue with older PHP?)

	* Change: Attempt to speed up the config wiz by a little bit.  Converted all
	  item names to use '' rather than "".  (Next will be the values themselves)

	* Change: Add mPUSHAccount setting, so the user can setup their own affiliate
	  account with mPUSH.

2004-10-07  Don Willingham <donwillingham@users.sf.net>  1.4.5-cvs-b221

	* New:  Add ability to only watermark the resized or full or both images.

2004-10-06  Jay Rossiter <cryptographite@users.sf.net>  1.4.5-cvs-b220

	* Change:  'Refresh' button causes the confirm page to post back to itself
	  This prevents the annoying "Refreshing this page requires a POST" browser error

	* Change:  Add a description field to the print services in the config wizard.

	* Change:  Correct the account for mPUSH

2004-10-06  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b219

	* New: Possibility to rebuild thumbs recursivly.
	       Code changes in do_command.php and classes/Album.php
	       Mostly done by Dell'Aiera Pol <dellaiera.pol@gmail.com>

	* Change: Tweaked do_command.php. Use of switch/case instead of if/else/elseif

	* New: Added function printPopupStart() that prints the HTML output for Popups.

2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b218

	* Change: Put popup related functions into lib/popup.php

	* Change: Put URL related functions into lib/url.php

2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b217

	* Fix: Missed a forgotton Popup.

2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b216

	* Fix: Reloaded Popups e.g. in Mambo were embedded.
	  (Caught by Kai Tomalik)

2004-10-03  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b215

	* Change: Tweaked the multiple comment deletion with using array_reverse()

2004-10-02  Jens A. Tkotz <jens@peino.de>  1.4.5-cvs-b214

	* Fix: Added doctype to view_comments and make it valid HTML 4.01
